--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ LivinnX_Amenity_Booker/__pycache__/settings.cpython-310.pyc
 celerybeat-schedule.bak
 celerybeat-schedule.dat
 celerybeat-schedule.dir
+
+__pycache__
