--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 # to change language of repo from HTML to Python
-    *.js linguist-language=Python
+*.css linguist-detectable=false
+*.java linguist-detectable=false
+*.python linguist-detectable=true 
+*.js linguist-detectable=false
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false 
     
